# phd-wr-prod

./: README.md  pyproject.toml  pytest.ini
notebooks/: demo_notebook.ipynb  order_3_conjugate_elements.ipynb
src/: array_based.py  cuda.py  main.py  ops_debbuger.py  portraits.py
tests/: test_array_based.py  test_cuda_portraits.py  test_portraits.py
wrepy/: __init__.py  array_based.py  main.py  portraits.py  requirements.txt  utils.py
wrepy/cuda/: device_fn.py  kernels.py  portrait.py  utils.py
