[project]
name = "wrepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ailadin", email = "korzhukandrew@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "frozendict>=2.4.6",
    "more-itertools>=10.6.0",
    "numba>=0.60.0",
    "numba-cuda==0.8.0",
    "numpy>=2.0.2",
    "rich>=13.9.4",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
